# COURSEWORK

./: README.md
Интеллектуальный телеграм-бот для автоматизации процесса создания конспектов/: Интеллектуальный телеграм-бот для автоматизации процесса создания конспектов.docx
Курсовая работа. Прыжок с парашютом./: my_class.py  pyproject.toml  Задание 1.py  Курсовая работа.Прыжок с парашютом.docx
Курсовая работа. Прыжок с парашютом./Задание 1/: main.py
Курсовая работа. Прыжок с парашютом./Задание 2/: main.py
Курсовая работа. Прыжок с парашютом./Задание 3/: main.py
Линейная регрессия. Предсказание стоимости квартир в программе KNIME/: Линейная регрессия. Предсказание стоимости квартир в программе KNIME.docx
